# quadrotor_mpcc

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: AcadosUtils.cmake  FindACADOS.cmake  FindBLASFEO.cmake  FindHPIPM.cmake
include/quadrotor_mpcc/: mpcc_core.h  mpcc_ros.h  quadrotor_mpcc.h  termcolor.hpp  types.h  utils.h
resources/envs/: race_uzh_19g.yaml  straight_line.yaml
resources/tracks/: crazyflie_arclen_traj.txt
scripts/crazyflie/: connect_log_param.py  motion_commander.py
scripts/quadrotor_model/: common.py  main.py  planner_ocp.json  realtime_viz.py  sys_dynamics.py  visualize_mpl.py
scripts/quadrotor_mpcc/: acados_ocp.json  acados_settings.py  common.py  debug.py  eval_sac.py  load_env.py  mpc_env.py  statistic_collection.py  sys_dynamics.py  train_sac.py  tube_gen.py
scripts/quadrotor_mpcc/crazyflie/: connect_log_param.py  motion_commander.py  track_trajectory.py
scripts/quadrotor_mpcc/stats/: 12gates_normalization_stats.npz
scripts/triple_integrator_model/: acados_ocp.json  acados_ros.py  acados_ros_closed_loop.py  acados_settings.py  common.py  mpc_env.py  sys_dynamics.py
src/: mpcc_core.cpp  mpcc_ros.cpp
